Bug 278708 - kmail, account creating assistant creates only imap4 account
Summary: kmail, account creating assistant creates only imap4 account
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.1
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-28 14:33 UTC by Philippe ROUBACH
Modified: 2012-01-27 09:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2011-07-28 14:33:03 UTC
Version:           2.1.1 (using KDE 4.6.5) 
OS:                Linux

using kmail assistant to create a count does not offer choice between pop3, imap4 etc.
then
you can only create an imap4 count with the assistant

with kmail 1 the assistant offers the choice.


Reproducible: Always

Steps to Reproduce:
launch trhe assitant to create a count and follow it till the end
then
 go to kamail setting > count
then
go to count
then
select the count you created
then
click on "modify"
then
you see this is an imap4 count


Actual Results:  
with the assistant we can only create an imap4 count

Expected Results:  
with the assitant we can create imap4, pop3, local etc. counts

OS: Linux (i686) release 2.6.38.7-desktop-1mnb2
Compiler: gcc

Mandriva 2010.0 rc2 32 bit
Comment 1 Philippe ROUBACH 2011-07-28 14:34:05 UTC
this is Mandriva 2011.0 rc2 and not Mandriva 2010.0 rc2
Comment 2 Torgny Nyblom 2011-07-28 17:26:21 UTC
Have you installed the kdepim-runtime packages?
Anyway this works so marking as downstream as I strongly suspect that this is a mandriva issue
Comment 3 Philippe ROUBACH 2011-07-28 18:29:53 UTC
what are the names of the packets ?
Comment 4 Philippe ROUBACH 2011-07-28 18:33:18 UTC
i found only one packet

kdepim-runtime-devel

it is not installed

is this the good packet to install ?
Comment 5 Philippe ROUBACH 2011-07-28 19:08:59 UTC
i found where the pb is

in the fist window
if you uncheck "search the isp parameters"
then
in the second windows
you have the choice beteween imap4, pop3 etc.

then less parameters are automaticaly filled

if you check "search the isp parameters"
then
you have no choice, only imap4
but more parameters are automaticaly filled by the assistant

by default "search the isp parameters" is checked

if kmail assistant does not know automaticaly create other count as pop3 then we must change my bug report to "enhancement"
if kmail assistant knows automaticaly create other count as pop3 then it is a true bug
Comment 6 Philippe ROUBACH 2011-07-31 07:40:54 UTC
see the answer of Mandriva, comment 2

https://qa.mandriva.com/show_bug.cgi?id=63847

there is no pb of kdepim4-runtime
Comment 7 Laurent Montel 2012-01-15 11:43:39 UTC
Still problem ?
Comment 8 Philippe ROUBACH 2012-01-26 16:15:59 UTC
mageia 2 alpha 3 kde 4.8.0

pb still valid
Comment 9 Philippe ROUBACH 2012-01-26 16:18:14 UTC
addendum to comment #8

kmail 2 (4.8.0)
Comment 10 Laurent Montel 2012-01-26 17:18:04 UTC
Ok valid. We can't select imap or pop3.
By default we select imap.
Will improve it to allow to select imap or pop3
Comment 11 Laurent Montel 2012-01-26 17:36:58 UTC
I work on this feature now (will be in 4.9. Need to add new i18n)
Comment 12 Laurent Montel 2012-01-27 08:27:43 UTC
Git commit 5632d91e82a968a0b4f817d4045159338a5d68bc by Montel Laurent.
Committed on 27/01/2012 at 09:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 278708 - kmail, account creating assistant creates only imap4

account
Now we can select imap or pop3 account.

FIXED-IN: 4.9

M  +148  -93   accountwizard/personaldatapage.cpp
M  +8    -0    accountwizard/personaldatapage.h
M  +155  -27   accountwizard/personaldatapage.ui

http://commits.kde.org/kdepim-runtime/5632d91e82a968a0b4f817d4045159338a5d68bc
Comment 13 Philippe ROUBACH 2012-01-27 08:38:50 UTC
thanks
but
why not in kde 4.8.1 ?

there are a new mandriva and mageia in may 2012 and the next ones one year later !
Comment 14 Laurent Montel 2012-01-27 09:04:06 UTC
As explain in comment 11, I added new i18n so I can't add to 4.8.1