Fix Bug 278708 - kmail, account creating assistant creates only imap4

account
Now we can select imap or pop3 account.

FIXED-IN: 4.9
BUG: 278708