accountwizard/personaldatapage.cpp
@@ -1,6 +1,7 @@
 /*
     Copyright (c) 2009 Volker Krause <vkrause@kde.org>
     Copyright (c) 2010 Tom Albers <toma@kde.org>
+    Copyright (c) 2012 Laurent Montel <montel@kde.org>
 
     This library is free software; you can redistribute it and/or modify it
     under the terms of the GNU Library General Public License as published by
@@ -67,7 +68,8 @@ PersonalDataPage::PersonalDataPage(Dialog* parent) :
   slotTextChanged();
   connect( ui.emailEdit, SIGNAL(textChanged(QString)), SLOT(slotTextChanged()) );
   connect( ui.nameEdit, SIGNAL(textChanged(QString)), SLOT(slotTextChanged()) );
-
+  connect( ui.createAccountPb, SIGNAL( clicked() ), SLOT( slotCreateAccountClicked() ) );
+  connect( ui.buttonGroup, SIGNAL( buttonClicked ( QAbstractButton *) ), SLOT( slotRadioButtonClicked( QAbstractButton* ) ) );
 #ifdef KDEPIM_ENTERPRISE_BUILD
   ui.checkOnlineGroupBox->setChecked( false );
 #endif
@@ -79,11 +81,42 @@ void PersonalDataPage::setHideOptionInternetSearch( bool hide )
   ui.checkOnlineGroupBox->setVisible( !hide );
 }
 
-void PersonalDataPage::slotTextChanged() 
+void PersonalDataPage::slotRadioButtonClicked( QAbstractButton* button)
+{
+  server s = mIspdb->smtpServers().first();
+  if ( button ==  ui.imapAccount )
+  {
+    server simap = mIspdb->imapServers().first(); // should be ok.
+    ui.incommingLabel->setText(i18n( "Imap, %1", simap.hostname));
+    ui.outgoingLabel->setText(i18n( "Smtp, %1", s.hostname ));
+    ui.usernameLabel->setText(simap.username);
+  }
+  else if ( button == ui.pop3Account )
+  {
+    server spop3 = mIspdb->pop3Servers().first(); // should be ok.
+    ui.incommingLabel->setText(i18n( "Pop3, %1", spop3.hostname));
+    ui.outgoingLabel->setText(i18n( "Smtp, %1", s.hostname));
+    ui.usernameLabel->setText(spop3.username);
+  }
+
+}
+
+void PersonalDataPage::slotCreateAccountClicked()
+{
+  configureSmtpAccount();
+  if ( ui.imapAccount->isChecked() )
+    configureImapAccount();
+  else
+    configurePop3Account();
+  emit leavePageNextOk();  // go to the next page
+  mSetupManager->execute();
+}
+
+void PersonalDataPage::slotTextChanged()
 {
   // Ignore the password field, as that can be empty when auth is based on ip-address.
   setValid( !ui.emailEdit->text().isEmpty() &&
-            !ui.nameEdit->text().isEmpty()  && 
+            !ui.nameEdit->text().isEmpty()  &&
             KPIMUtils::isValidSimpleAddress( ui.emailEdit->text() ) );
 }
 
@@ -116,101 +149,123 @@ void PersonalDataPage::ispdbSearchFinished( bool ok )
   kDebug() << ok;
 
   if ( ok ) {
-    // configure the stuff 
-    if ( !mIspdb->smtpServers().isEmpty() ) {
-      server s = mIspdb->smtpServers().first(); // should be ok.
-      kDebug() << "Configuring transport for" << s.hostname;
 
-      QObject* object = mSetupManager->createTransport("smtp");
-      Transport* t = qobject_cast<Transport*>( object ); 
-      t->setName( mIspdb->name( Ispdb::Long ) );
-      t->setHost( s.hostname );
-      t->setPort( s.port );
-      t->setUsername( s.username );
-      t->setPassword( ui.passwordEdit->text() );
-      switch (s.authentication) {
-        case Ispdb::Plain: t->setAuthenticationType( "plain" ); break;
-        case Ispdb::CramMD5: t->setAuthenticationType( "cram-md5" ); break;
-        case Ispdb::NTLM: t->setAuthenticationType( "ntlm" ); break;
-        case Ispdb::GSSAPI: t->setAuthenticationType( "gssapi" ); break;
-        case Ispdb::ClientIP: break;
-        case Ispdb::NoAuth: break;
-        default: break;
-      }
-      switch (s.socketType) {
-        case Ispdb::Plain: t->setEncryption( "none" );break;
-        case Ispdb::SSL: t->setEncryption( "ssl" );break;
-        case Ispdb::StartTLS: t->setEncryption( "tls" );break;
-        default: break;
-      }
-    } else
-      kDebug() << "No transport to be created....";
+    if ( !mIspdb->imapServers().isEmpty() && !mIspdb->pop3Servers().isEmpty() )
+    {
+      ui.stackedPage->setCurrentIndex( 1 );
+      slotRadioButtonClicked( ui.imapAccount);
+    }
+    else
+      automaticConfigureAccount();
 
-
-    // configure incoming
-
-
-    if ( !mIspdb->imapServers().isEmpty() ) {
-      server s = mIspdb->imapServers().first(); // should be ok.
-      kDebug() << "Configuring imap for" << s.hostname;
-
-      QObject* object = mSetupManager->createResource("akonadi_imap_resource");
-      Resource* t = qobject_cast<Resource*>( object ); 
-      t->setName( mIspdb->name( Ispdb::Long ) );
-      t->setOption( "ImapServer", s.hostname );
-      t->setOption( "ImapPort", s.port );
-      t->setOption( "UserName", s.username );
-      t->setOption( "Password", ui.passwordEdit->text() );
-      switch (s.authentication) {
-        case Ispdb::Plain: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::CLEAR ); break;
-        case Ispdb::CramMD5: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::CRAM_MD5 ); break;
-        case Ispdb::NTLM: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::NTLM ); break;
-        case Ispdb::GSSAPI: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::GSSAPI ); break;
-        case Ispdb::ClientIP: break;
-        case Ispdb::NoAuth: break;
-        default: break;
-      }
-      switch (s.socketType) {
-        case Ispdb::None: t->setOption( "Safety", "None" );break;
-        case Ispdb::SSL: t->setOption( "Safety", "SSL" );break;
-        case Ispdb::StartTLS: t->setOption( "Safety", "STARTTLS" );break;
-        default: break;
-      }
-    } else if ( !mIspdb->pop3Servers().isEmpty() ) {
-      server s = mIspdb->pop3Servers().first(); // should be ok.
-      kDebug() << "No Imap to be created, configuring pop3 for" << s.hostname;
-
-      QObject* object = mSetupManager->createResource("akonadi_pop3_resource");
-      Resource* t = qobject_cast<Resource*>( object ); 
-      t->setName( mIspdb->name( Ispdb::Long ) );
-      t->setOption( "Host", s.hostname );
-      t->setOption( "Port", s.port );
-      t->setOption( "Login", s.username );
-      t->setOption( "Password", ui.passwordEdit->text() );
-      switch (s.authentication) {
-        case Ispdb::Plain: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::PLAIN ); break;
-        case Ispdb::CramMD5: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::CRAM_MD5 ); break;
-        case Ispdb::NTLM: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::NTLM ); break;
-        case Ispdb::GSSAPI: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::GSSAPI ); break;
-        case Ispdb::ClientIP:
-        case Ispdb::NoAuth:
-        default: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::CLEAR ); break;
-      }
-      switch (s.socketType) {
-        case Ispdb::SSL: t->setOption( "UseSSL", 1 );break;
-        case Ispdb::StartTLS: t->setOption( "UseTLS", 1 );break;
-        case Ispdb::None:
-        default: t->setOption( "UseTLS", 1 ); break;
-      }
-    } else
-      kDebug() << "No Imap or pop3 to be created....";
-
-    emit leavePageNextOk();  // go to the next page
-    mSetupManager->execute();
   } else {
     emit manualWanted( true );     // enable the manual page
     emit leavePageNextOk();
   }
+}
+
+
+void PersonalDataPage::configureSmtpAccount()
+{
+  if ( !mIspdb->smtpServers().isEmpty() ) {
+    server s = mIspdb->smtpServers().first(); // should be ok.
+    kDebug() << "Configuring transport for" << s.hostname;
+
+    QObject* object = mSetupManager->createTransport("smtp");
+    Transport* t = qobject_cast<Transport*>( object );
+    t->setName( mIspdb->name( Ispdb::Long ) );
+    t->setHost( s.hostname );
+    t->setPort( s.port );
+    t->setUsername( s.username );
+    t->setPassword( ui.passwordEdit->text() );
+    switch (s.authentication) {
+    case Ispdb::Plain: t->setAuthenticationType( "plain" ); break;
+    case Ispdb::CramMD5: t->setAuthenticationType( "cram-md5" ); break;
+    case Ispdb::NTLM: t->setAuthenticationType( "ntlm" ); break;
+    case Ispdb::GSSAPI: t->setAuthenticationType( "gssapi" ); break;
+    case Ispdb::ClientIP: break;
+    case Ispdb::NoAuth: break;
+    default: break;
+    }
+    switch (s.socketType) {
+    case Ispdb::Plain: t->setEncryption( "none" );break;
+    case Ispdb::SSL: t->setEncryption( "ssl" );break;
+    case Ispdb::StartTLS: t->setEncryption( "tls" );break;
+    default: break;
+    }
+  } else
+    kDebug() << "No transport to be created....";
+}
+
+void PersonalDataPage::configureImapAccount()
+{
+  if ( !mIspdb->imapServers().isEmpty() ) {
+    server s = mIspdb->imapServers().first(); // should be ok.
+    kDebug() << "Configuring imap for" << s.hostname;
+
+    QObject* object = mSetupManager->createResource("akonadi_imap_resource");
+    Resource* t = qobject_cast<Resource*>( object );
+    t->setName( mIspdb->name( Ispdb::Long ) );
+    t->setOption( "ImapServer", s.hostname );
+    t->setOption( "ImapPort", s.port );
+    t->setOption( "UserName", s.username );
+    t->setOption( "Password", ui.passwordEdit->text() );
+    switch (s.authentication) {
+    case Ispdb::Plain: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::CLEAR ); break;
+    case Ispdb::CramMD5: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::CRAM_MD5 ); break;
+    case Ispdb::NTLM: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::NTLM ); break;
+    case Ispdb::GSSAPI: t->setOption("Authentication", MailTransport::Transport::EnumAuthenticationType::GSSAPI ); break;
+    case Ispdb::ClientIP: break;
+    case Ispdb::NoAuth: break;
+    default: break;
+    }
+    switch (s.socketType) {
+    case Ispdb::None: t->setOption( "Safety", "None" );break;
+    case Ispdb::SSL: t->setOption( "Safety", "SSL" );break;
+    case Ispdb::StartTLS: t->setOption( "Safety", "STARTTLS" );break;
+    default: break;
+    }
+  }
+}
+
+void PersonalDataPage::configurePop3Account()
+{
+  if ( !mIspdb->pop3Servers().isEmpty() ) {
+    server s = mIspdb->pop3Servers().first(); // should be ok.
+    kDebug() << "No Imap to be created, configuring pop3 for" << s.hostname;
+
+    QObject* object = mSetupManager->createResource("akonadi_pop3_resource");
+    Resource* t = qobject_cast<Resource*>( object );
+    t->setName( mIspdb->name( Ispdb::Long ) );
+    t->setOption( "Host", s.hostname );
+    t->setOption( "Port", s.port );
+    t->setOption( "Login", s.username );
+    t->setOption( "Password", ui.passwordEdit->text() );
+    switch (s.authentication) {
+    case Ispdb::Plain: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::PLAIN ); break;
+    case Ispdb::CramMD5: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::CRAM_MD5 ); break;
+    case Ispdb::NTLM: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::NTLM ); break;
+    case Ispdb::GSSAPI: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::GSSAPI ); break;
+    case Ispdb::ClientIP:
+    case Ispdb::NoAuth:
+    default: t->setOption("AuthenticationMethod", MailTransport::Transport::EnumAuthenticationType::CLEAR ); break;
+    }
+    switch (s.socketType) {
+    case Ispdb::SSL: t->setOption( "UseSSL", 1 );break;
+    case Ispdb::StartTLS: t->setOption( "UseTLS", 1 );break;
+    case Ispdb::None:
+    default: t->setOption( "UseTLS", 1 ); break;
+    }
+  }
+}
+
+void PersonalDataPage::automaticConfigureAccount()
+{
+  configureSmtpAccount();
+  configureImapAccount();
+  configurePop3Account();
+  emit leavePageNextOk();  // go to the next page
+  mSetupManager->execute();
 }
 
 void PersonalDataPage::leavePageNextRequested()
