accountwizard/personaldatapage.h
@@ -1,6 +1,7 @@
 /*
     Copyright (c) 2009 Volker Krause <vkrause@kde.org>
     Copyright (c) 2010 Tom Albers <toma@kde.org>
+    Copyright (c) 2012 Laurent Montel <montel@kde.org>
 
     This library is free software; you can redistribute it and/or modify it
     under the terms of the GNU Library General Public License as published by
@@ -42,11 +43,18 @@ class PersonalDataPage : public Page
   private slots:
     void ispdbSearchFinished( bool ok );
     void slotTextChanged();
+    void slotCreateAccountClicked();
+    void slotRadioButtonClicked( QAbstractButton* button);
 
   signals:
     void manualWanted( bool );
 
   private:
+    void automaticConfigureAccount();
+    void configureSmtpAccount();
+    void configureImapAccount();
+    void configurePop3Account();
+
     Ui::PersonalDataPage ui;
     Ispdb* mIspdb;
     SetupManager *mSetupManager;
